# yaml2nix

./: .gitignore  Cargo.nix  Cargo.toml  README.md  flake.nix
.github/workflows/: build-and-test.yml  statix.toml
src/: main.rs
src/testdata/: deployment.nix  escape.nix  escape.yaml  keywords.nix  keywords.yaml  multi-doc.nix  multi-doc.yaml
