[package]
name = "yaml2nix"
version = "0.1.0"
authors = ["Euan Kemp <euank@euank.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_yaml = "0.8.13"
serde-nix = { git = "https://github.com/euank/serde-nix.git" }
rnix = "0.8.0"
nixpkgs-fmt = "0.9.0"
